props price 4 col

--- a/props-price-tab.html
+++ b/props-price-tab.html
@@ -228,19 +228,19 @@
                                     <span class="numerics">$28,651,568</span>
                                 </div>
                                 <div class="statistics-blks">
-                                    <h5 class="blks-title"><span><img src="img/info-qstn-mark.svg" alt=""></span>Trading Volume
+                                    <h5 class="blks-title"><span><img src="img/info-qstn-mark.svg" alt=""></span> 24 hour Trading Volume
                                     </h5>
-                                    <span class="numerics">$49,861,578</span>
+                                    <span class="numerics">$ 358,890 USD</span>
                                 </div>
                                 <div class="statistics-blks">
                                     <h5 class="blks-title"><span><img src="img/info-qstn-mark.svg" alt=""></span>Total Supply
                                     </h5>
-                                    <span class="numerics">$$49,861,578</span>
+                                    <span class="numerics">1,200,000,000 PROPS</span>
                                 </div>
                                 <div class="statistics-blks">
                                     <h5 class="blks-title"><span><img src="img/info-qstn-mark.svg" alt=""></span>PROPS in Circulation
                                     </h5>
-                                    <span class="numerics">$49,861,578</span>
+                                    <span class="numerics">332,491,156 PROPS</span>
                                 </div>
                                 <div class="statistics-blks">
                                     <h5 class="blks-title"><span><img src="img/info-qstn-mark.svg" alt=""></span>Circulating supply %</h5>
@@ -249,8 +249,40 @@
                                 <div class="statistics-blks">
                                     <h5 class="blks-title"><span><img src="img/info-qstn-mark.svg" alt=""></span>Total Holders
                                     </h5>
-                                    <span class="numerics">$49,861,578</span>
+                                    <span class="numerics">7,025</span>
                                 </div>
+
+                                <div class="statistics-blks">
+                                    <h5 class="blks-title"><span><img src="img/info-qstn-mark.svg" alt=""></span>Total Props Staked
+                                    </h5>
+                                    <span class="numerics">611,003 PROPS</span>
+                                </div>
+                                <div class="statistics-blks">
+                                    <h5 class="blks-title"><span><img src="img/info-qstn-mark.svg" alt=""></span>% of staked circulating supply
+                                    </h5>
+                                    <span class="numerics">0.18 %</span>
+                                </div>
+                                <div class="statistics-blks">
+                                    <h5 class="blks-title"><span><img src="img/info-qstn-mark.svg" alt=""></span>Total USD TVL
+                                    </h5>
+                                    <span class="numerics">$ 33,741.66 USD</span>
+                                </div>
+                                <div class="statistics-blks">
+                                    <h5 class="blks-title"><span><img src="img/info-qstn-mark.svg" alt=""></span>Platform Investors
+                                    </h5>
+                                    <span class="numerics">21</span>
+                                </div>
+                                <div class="statistics-blks">
+                                    <h5 class="blks-title"><span><img src="img/info-qstn-mark.svg" alt=""></span>Total On-Chain Transactions
+                                    </h5>
+                                    <span class="numerics">99,462</span>
+                                </div>
+                                <div class="statistics-blks">
+                                    <h5 class="blks-title"><span><img src="img/info-qstn-mark.svg" alt=""></span>Volume/Market cap (24h)
+                                    </h5>
+                                    <span class="numerics">1.95 %</span>
+                                </div>
+
                             </div>
                         </section>
 
