--- a/props-price-tab.html
+++ b/props-price-tab.html
@@ -54,6 +54,18 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="#">
+                                <img src="img/program.svg" alt="">
+                                <span class="nav-label">Ambassador Program</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">
+                                <img src="img/props_price.svg" alt="">
+                                <span class="nav-label">PROPS Price</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
                                 <img src="img/nav-briefcase.svg" alt="">
                                 <span class="nav-label">Portfolio</span>
                             </a>
