--- a/home.html
+++ b/home.html
@@ -347,9 +347,10 @@
                 </div>
             </div>
 
-            <div class="body-content-outer body-content-outer-home">
+            <!-- <div class="body-content-outer body-content-outer-home"> -->
+                <div class="body-content-outer"></div>
                 
-                <div class="property-listing-cover">
+                <div class="property-listing-cover home-tab-outer">
                     <div class="filter-wrapper d-flex">
                         <div class="block-left">
                             <div class="filter-nav-btn-wrapper d-flex">
@@ -357,6 +358,8 @@
                                 <button class="filter-nav-btn">Portfolio</button>
                                 <button class="filter-nav-btn">Staking</button>
                                 <button class="filter-nav-btn">Transactions</button>
+                                <!-- <button class="filter-nav-btn">PROPS Price</button>
+                                <button class="filter-nav-btn">Ambassador Program</button> -->
                             </div>
                         </div>
 
