portfolio white theme

--- a/potfolio-v3.html
+++ b/potfolio-v3.html
@@ -831,7 +831,8 @@
                                     <h5 class="pool-title"><span>Active Pool</span></h5>
                                     <div class="pool-card-sm">
                                         <div class="icon">
-                                            <img src="img/active-pool-1.svg" alt="">
+                                            <img class="img-dark" src="img/active-pool-1.svg" alt="">
+                                            <img class="img-light" src="img/active-pool-wht-1.svg" alt="">
                                         </div>
                                         <div class="pool-data">
                                             <p>Total Staked in Active Pool</p>
@@ -841,7 +842,8 @@
                                     
                                     <div class="pool-card-sm">
                                         <div class="icon">
-                                            <img src="img/active-pool-2.svg" alt="">
+                                            <img class="img-dark" src="img/active-pool-2.svg" alt="">
+                                            <img class="img-light" src="img/active-pool-wht-2.svg" alt="">
                                         </div>
                                         <div class="pool-data">
                                             <p>Total Rewards in Active Pool</p>
@@ -851,7 +853,8 @@
 
                                     <div class="pool-card-sm">
                                         <div class="icon">
-                                            <img src="img/active-pool-3.svg" alt="">
+                                            <img class="img-dark" src="img/active-pool-3.svg" alt="">
+                                            <img class="img-light" src="img/active-pool-wht-3.svg" alt="">
                                         </div>
                                         <div class="pool-data">
                                             <p>Total Rewards Collected</p>
@@ -861,7 +864,8 @@
 
                                     <div class="pool-card-sm">
                                         <div class="icon">
-                                            <img src="img/active-pool-4.svg" alt="">
+                                            <img class="img-dark" src="img/active-pool-4.svg" alt="">
+                                            <img class="img-light" src="img/active-pool-wht-4.svg" alt="">
                                         </div>
                                         <div class="pool-data">
                                             <p>Total Rewards Yet to Claim</p>
@@ -876,7 +880,8 @@
                                     <h5 class="pool-title"><span>Expired Pools</span></h5>
                                     <div class="pool-card-sm">
                                         <div class="icon">
-                                            <img src="img/exp-pool-1.svg" alt="">
+                                            <img class="img-dark" src="img/exp-pool-1.svg" alt="">
+                                            <img class="img-light" src="img/exp-pool-wht-1.svg" alt="">
                                         </div>
                                         <div class="pool-data">
                                             <p>PROPS available to Withdraw </p>
@@ -886,7 +891,8 @@
                                     
                                     <div class="pool-card-sm">
                                         <div class="icon">
-                                            <img src="img/exp-pool-2.svg" alt="">
+                                            <img class="img-dark" src="img/exp-pool-2.svg" alt="">
+                                            <img class="img-light" src="img/exp-pool-wht-2.svg" alt="">
                                         </div>
                                         <div class="pool-data">
                                             <p>Staked Amount Withdrawn</p>
@@ -896,7 +902,8 @@
 
                                     <div class="pool-card-sm">
                                         <div class="icon">
-                                            <img src="img/exp-pool-3.svg" alt="">
+                                            <img class="img-dark" src="img/exp-pool-3.svg" alt="">
+                                            <img class="img-light" src="img/exp-pool-wht-3.svg" alt="">
                                         </div>
                                         <div class="pool-data">
                                             <p>Rewards Withdrawn</p>
