--- a/potfolio-v3.html
+++ b/potfolio-v3.html
@@ -401,11 +401,18 @@
                                     </div>
                                     <div class="graph-btn-right">
                                         <div class="g-filter-block d-flex">
-                                            <select class="grph-select me-2" name="" id="">
+                                            <!-- <select class="grph-select me-2" name="" id="">
                                                 <option value="">Total Rewards Accrued</option>
                                                 <option value="">2</option>
                                                 <option value="">3</option>
-                                            </select>
+                                            </select> -->
+                                            <div class="total-btn-cover">
+                                                Total: 
+                                                <div class="total-btn-grp">
+                                                    <button class="total-btn active">Rewards Accured</button>
+                                                    <button class="total-btn">Expected Rewards</button>
+                                                </div>
+                                            </div>
                                             <select class="grph-select me-2" name="" id="">
                                                 <option value="">Active pool</option>
                                                 <option value="">2</option>
