--- a/potfolio-v3.html
+++ b/potfolio-v3.html
@@ -867,10 +867,10 @@
                                 <div class="prop-wal-bal-block">
                                     <div class="wal-bal-label">
                                         <img src="img/wal-bal.svg" alt="">
-                                        PROPS Wallet Balance :
+                                        Wallet Balance:
                                     </div>
                                     <div class="wal-bal-amt">
-                                        $23,242.89
+                                        $23,45242.89 PROPS
                                     </div>
                                 </div>
 
