--- a/potfolio-v3.html
+++ b/potfolio-v3.html
@@ -1126,7 +1126,7 @@
             $('.maturing-soon-pools-slider').slick({
                 arrows: false,
                 dots: false,
-                autoplay: true,
+                autoplay: false,
                 slidesToShow: 1,
                 responsive: [
                     {
@@ -1141,7 +1141,7 @@
             $('.expired-pools-slider').slick({
                 arrows: false,
                 dots: false,
-                autoplay: true,
+                autoplay: false,
                 slidesToShow: 2,
                 responsive: [
                     {
