--- a/potfolio-v3.html
+++ b/potfolio-v3.html
@@ -871,7 +871,7 @@
                                 </div>
 
                                 <div class="pool-block">
-                                    <h5 class="pool-title"><img class="me-2" src="img/est-rew.svg" alt=""> <span>Estimated Rewards</span></h5>
+                                    <h5 class="pool-title"><img class="me-2" src="img/est-rew.svg" alt=""> <span>Estimated Rewards <img class="info-i" src="img/info-grey.svg" alt=""></span></h5>
                                     <div class="est-pool-card-sm">
                                         <div class="label-left">
                                             <span class="period">Daily</span>:
