--- a/dashboard.html
+++ b/dashboard.html
@@ -344,16 +344,21 @@
                                     <div class="db-graph-card">
                                         <div class="graph-title-wrapper">
                                             <div class="graph-title-block">
-                                                <p>total PROPS staked</p>
+                                                <p>total PROPS staked <img src="img/info-icon.svg" alt=""></p>
                                                 <h4>1,88,569.42 $PROPS</h4>
                                             </div>
                                             <div class="right-block">
-                                                <div class="filter-btn-cover">
-                                                    <button class="filter-btn active">1D</button>
-                                                    <button class="filter-btn">7D</button>
-                                                    <button class="filter-btn">1M</button>
-                                                    <button class="filter-btn">1Y</button>
-                                                    <button class="filter-btn">All</button>
+                                                <div class="btn-top-block d-flex">
+                                                    <div class="filter-btn-cover">
+                                                        <button class="filter-btn active">1D</button>
+                                                        <button class="filter-btn">7D</button>
+                                                        <button class="filter-btn">1M</button>
+                                                        <button class="filter-btn">1Y</button>
+                                                        <button class="filter-btn">All</button>
+                                                    </div>
+                                                    <button class="date-picker-btn">
+                                                        <img src="img/grp-range-calndr.svg" alt="">
+                                                    </button>
                                                 </div>
                                                 <div class="select-block mt-2">
                                                     <div class="dropdown grph-legend-dropdown ms-auto">
