--- a/dashboard.html
+++ b/dashboard.html
@@ -920,6 +920,41 @@
                                     </div>
                                 </div>
 
+                                <!-- walet address -->
+                                <div class="col-md-6 db-graph-col">
+                                    <div class="db-graph-card">
+                                        <div class="graph-title-wrapper">
+                                            <div class="graph-title-block">
+                                                <p>Reward Distribution Concentration</p>
+                                                <h4>17565</h4>
+                                            </div>
+                                            <div class="right-block">
+                                                <div class="filter-btn-cover">
+                                                    <button class="filter-btn active">1D</button>
+                                                    <button class="filter-btn">7D</button>
+                                                    <button class="filter-btn">1M</button>
+                                                    <button class="filter-btn">1Y</button>
+                                                    <button class="filter-btn">All</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="db-graph-block db-graph-block-relative">
+                                            <div class="graph-wallet-address">
+                                                <div class="address-block">
+                                                    gshbjt...xgshsj
+                                                </div>
+                                                <button class="copy-btn-def">
+                                                    <img src="img/td-copy-new.svg" alt="">
+                                                </button>
+                                                <button class="close-btn">
+                                                    <img src="img/close-modal.svg">
+                                                </button>
+                                            </div>
+                                            <img style="width: 100%;" src="img/db-admin-2.svg" alt="">
+                                        </div>
+                                    </div>
+                                </div>
+
                             </div>
 
                         </div>
