--- a/dashboard.html
+++ b/dashboard.html
@@ -939,16 +939,18 @@
                                             </div>
                                         </div>
                                         <div class="db-graph-block db-graph-block-relative">
-                                            <div class="graph-wallet-address">
-                                                <div class="address-block">
-                                                    gshbjt...xgshsj
+                                            <div class="graph-wallet-outer">
+                                                <div class="graph-wallet-address">
+                                                    <div class="address-block">
+                                                        gshbjt...xgshsj
+                                                    </div>
+                                                    <button class="copy-btn-def">
+                                                        <img src="img/td-copy-new.svg" alt="">
+                                                    </button>
+                                                    <!-- <button class="close-btn">
+                                                        <img src="img/close-modal.svg">
+                                                    </button> -->
                                                 </div>
-                                                <button class="copy-btn-def">
-                                                    <img src="img/td-copy-new.svg" alt="">
-                                                </button>
-                                                <button class="close-btn">
-                                                    <img src="img/close-modal.svg">
-                                                </button>
                                             </div>
                                             <img style="width: 100%;" src="img/db-admin-2.svg" alt="">
                                         </div>
