--- a/staking.html
+++ b/staking.html
@@ -628,7 +628,7 @@
                                                         </div>
                                                         <div class="dur-block dur-itm-block">
                                                             Duration<br>
-                                                            <span>2 DAYS 21 HOURS 56 Minutes</span>
+                                                            <span>1YEAR 1 1MONTH 2 DAYS 21 HOURS 56 Minutes</span>
                                                         </div>
                                                     </div>
 
