--- a/home.html
+++ b/home.html
@@ -1353,7 +1353,7 @@ Rewards = P*N*R/100 (Where P: Principle, N: Staking duration in years, R: Rate o
                                 </button>
                             </div>
 
-                            <div class="props-btn-card">
+                            <!-- <div class="props-btn-card">
                                 <button class="btn wallet-btn">
                                     <div class="wallet-icon">
                                         <img src="img/coin-liquid.svg" alt="">
@@ -1396,7 +1396,7 @@ Rewards = P*N*R/100 (Where P: Principle, N: Staking duration in years, R: Rate o
                                     </div>
                                     BitMart
                                 </button>
-                            </div>
+                            </div> -->
 
                             
                         </div>
