--- a/potfolio-v3.html
+++ b/potfolio-v3.html
@@ -1027,7 +1027,8 @@
                                         </div>
                                         <div class="content-block">
                                             <div class="sm-table-block table-responsive custom-scroll">
-                                                <table class="table card-table sticky-table">
+                                                <!-- <table class="table card-table sticky-table"> -->
+                                                <table class="table card-table">
                                                     <thead>
                                                         <tr>
                                                             <th>Type of Staking</th>
@@ -1053,7 +1054,15 @@
                                                             <td class="txt-light text-center">3500</td>
                                                             <td class="txt-blue text-center">3500</td>
                                                             <td>35</td>
-                                                            <td>
+                                                            <td class="stakes-btn-td">
+                                                                <div class="btn-stakes">
+                                                                    <button class="btn-def claim-btn rewards-btn">Claim Rewards</button>
+                                                                    <button class="btn-def claim-btn unstake-btn" data-bs-toggle="modal" data-bs-target="#claimRewardModal">Unstake</button>
+                                                                </div>
+                                                            </td>
+                                                        </tr>
+                                                        <tr class="mob-tr">
+                                                            <td colspan="9">
                                                                 <div class="btn-stakes">
                                                                     <button class="btn-def claim-btn rewards-btn">Claim Rewards</button>
                                                                     <button class="btn-def claim-btn unstake-btn" data-bs-toggle="modal" data-bs-target="#claimRewardModal">Unstake</button>
@@ -1070,12 +1079,7 @@
                                                             <td class="txt-light text-center">3500</td>
                                                             <td class="txt-blue text-center">3500</td>
                                                             <td>35</td>
-                                                            <td>
-                                                                <div class="btn-stakes">
-                                                                    <button class="btn-def claim-btn rewards-btn">Claim Rewards</button>
-                                                                    <button class="btn-def claim-btn unstake-btn" data-bs-toggle="modal" data-bs-target="#claimRewardModal">Unstake</button>
-                                                                </div>
-                                                            </td>
+                                                            
                                                         </tr>
                                                         <tr>
                                                             <td class="txt-b">Long Term</td>
