--- a/dashboard.html
+++ b/dashboard.html
@@ -43,7 +43,7 @@
                     </div>
                 </div>
                 <div class="navbar-collapse-block">
-                    <ul class="navbar-ul">
+                    <ul class="navbar-ul custom-scroll">
                         <li class="nav-item">
                             <a class="nav-link" href="#">
                                 <span class="nav-icon">
@@ -86,6 +86,24 @@
                             <a class="nav-link" href="#">
                                 <img src="img/paper-nav.svg" alt="">
                                 <span class="nav-label">Whitepaper</span>
+                            </a>
+                        </li>
+                        <li class="nav-item nav-item-logout">
+                            <a class="nav-link" href="#">
+                                <img src="img/support-nav.svg" alt="">
+                                <span class="nav-label">Support</span>
+                            </a>
+                        </li>
+                        <li class="nav-item nav-item-logout">
+                            <a class="nav-link" href="#">
+                                <img src="img/support-nav.svg" alt="">
+                                <span class="nav-label">Support</span>
+                            </a>
+                        </li>
+                        <li class="nav-item nav-item-logout">
+                            <a class="nav-link" href="#">
+                                <img src="img/support-nav.svg" alt="">
+                                <span class="nav-label">Support</span>
                             </a>
                         </li>
                         <li class="nav-item nav-item-logout">
