--- a/potfolio-v3.html
+++ b/potfolio-v3.html
@@ -1079,7 +1079,20 @@
                                                             <td class="txt-light text-center">3500</td>
                                                             <td class="txt-blue text-center">3500</td>
                                                             <td>35</td>
-                                                            
+                                                            <td class="stakes-btn-td">
+                                                                <div class="btn-stakes">
+                                                                    <button class="btn-def claim-btn rewards-btn">Claim Rewards</button>
+                                                                    <button class="btn-def claim-btn unstake-btn" data-bs-toggle="modal" data-bs-target="#claimRewardModal">Unstake</button>
+                                                                </div>
+                                                            </td>
+                                                        </tr>
+                                                        <tr class="mob-tr">
+                                                            <td colspan="9">
+                                                                <div class="btn-stakes">
+                                                                    <button class="btn-def claim-btn rewards-btn">Claim Rewards</button>
+                                                                    <button class="btn-def claim-btn unstake-btn" data-bs-toggle="modal" data-bs-target="#claimRewardModal">Unstake</button>
+                                                                </div>
+                                                            </td>
                                                         </tr>
                                                         <tr>
                                                             <td class="txt-b">Long Term</td>
