--- a/potfolio-v3.html
+++ b/potfolio-v3.html
@@ -1028,7 +1028,7 @@
                                         <div class="content-block">
                                             <div class="sm-table-block table-responsive custom-scroll">
                                                 <!-- <table class="table card-table sticky-table"> -->
-                                                <table class="table card-table">
+                                                <table class="table card-table my-stakes-table">
                                                     <thead>
                                                         <tr>
                                                             <th>Type of Staking</th>
