my stake updates

--- a/potfolio-v3.html
+++ b/potfolio-v3.html
@@ -1054,21 +1054,21 @@
                                                             <td class="txt-light text-center">3500</td>
                                                             <td class="txt-blue text-center">3500</td>
                                                             <td>35</td>
-                                                            <td class="stakes-btn-td">
+                                                            <td>
                                                                 <div class="btn-stakes">
                                                                     <button class="btn-def claim-btn rewards-btn">Claim Rewards</button>
                                                                     <button class="btn-def claim-btn unstake-btn" data-bs-toggle="modal" data-bs-target="#claimRewardModal">Unstake</button>
                                                                 </div>
                                                             </td>
                                                         </tr>
-                                                        <tr class="mob-tr">
+                                                        <!-- <tr class="mob-tr">
                                                             <td colspan="9">
                                                                 <div class="btn-stakes">
                                                                     <button class="btn-def claim-btn rewards-btn">Claim Rewards</button>
                                                                     <button class="btn-def claim-btn unstake-btn" data-bs-toggle="modal" data-bs-target="#claimRewardModal">Unstake</button>
                                                                 </div>
                                                             </td>
-                                                        </tr>
+                                                        </tr> -->
                                                         <tr>
                                                             <td class="txt-b">Long Term</td>
                                                             <td class="txt-light">3500</td>
@@ -1079,15 +1079,8 @@
                                                             <td class="txt-light text-center">3500</td>
                                                             <td class="txt-blue text-center">3500</td>
                                                             <td>35</td>
-                                                            <td class="stakes-btn-td">
-                                                                <div class="btn-stakes">
-                                                                    <button class="btn-def claim-btn rewards-btn">Claim Rewards</button>
-                                                                    <button class="btn-def claim-btn unstake-btn" data-bs-toggle="modal" data-bs-target="#claimRewardModal">Unstake</button>
-                                                                </div>
-                                                            </td>
-                                                        </tr>
-                                                        <tr class="mob-tr">
-                                                            <td colspan="9">
+                                                            <!-- <td class="stakes-btn-td"> -->
+                                                            <td>
                                                                 <div class="btn-stakes">
                                                                     <button class="btn-def claim-btn rewards-btn">Claim Rewards</button>
                                                                     <button class="btn-def claim-btn unstake-btn" data-bs-toggle="modal" data-bs-target="#claimRewardModal">Unstake</button>
