--- a/potfolio-v3.html
+++ b/potfolio-v3.html
@@ -423,12 +423,12 @@
                                         <div class="bottom-lgd d-flex">
                                             <div class="dropdown grph-legend-dropdown ms-auto">
                                                 <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                                                  <span class="leg-color"></span> Summer Pool
+                                                  <span class="leg-color"></span> Lorem Ipsum is simply dummy text
                                                 </button>
                                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton1">
                                                   <li>
                                                     <a class="dropdown-item" href="#">
-                                                        <span class="leg-color"></span> Summer Pool
+                                                        <span class="leg-color"></span> Lorem Ipsum is simply dummy text
                                                     </a>
                                                 </li>
                                                   <li>
