--- a/bridge.html
+++ b/bridge.html
@@ -474,13 +474,18 @@
                                                 </div>
                                                 <div class="right-block">
                                                     <div class="right-block-inner">
-                                                        <p>Network</p>
-                                                        <div class="select-block">
-                                                            <select class="connect-select">
-                                                                <option value="">Select</option>
-                                                                <option value="">Select 1</option>
-                                                                <option value="">Select 2</option>
-                                                            </select>
+                                                        <div class="props-icon">
+                                                            <img class="img-filter-dark" src="img/aptos-round.svg" alt="">
+                                                        </div>
+                                                        <div class="sm-data">
+                                                            <p>Network</p>
+                                                            <div class="select-block">
+                                                                <select class="connect-select">
+                                                                    <option value="">Select</option>
+                                                                    <option value="">Select 1</option>
+                                                                    <option value="">Select 2</option>
+                                                                </select>
+                                                            </div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -511,7 +516,7 @@
         
                                         <div class="connect-btn-block">
                                             <div class="connected-id">
-                                                <img src="img/connected-icon.png" alt="">
+                                                <img class="img-filter-dark" src="img/aptos-round.svg" alt="">
                                                 <div class="cnt-id">1FfmbHfnpaZjKFvyi1o....</div>
                                             </div>
                                             <button class="connect-btn">Connect</button>
@@ -529,13 +534,18 @@
                                                 </div>
                                                 <div class="right-block">
                                                     <div class="right-block-inner">
-                                                        <p>Network</p>
-                                                        <div class="select-block">
-                                                            <select class="connect-select">
-                                                                <option value="">Select</option>
-                                                                <option value="">Select 1</option>
-                                                                <option value="">Select 2</option>
-                                                            </select>
+                                                        <div class="props-icon">
+                                                            <img src="img/base-round.svg" alt="">
+                                                        </div>
+                                                        <div class="sm-data">
+                                                            <p>Network</p>
+                                                            <div class="select-block">
+                                                                <select class="connect-select">
+                                                                    <option value="">Select</option>
+                                                                    <option value="">Select 1</option>
+                                                                    <option value="">Select 2</option>
+                                                                </select>
+                                                            </div>
                                                         </div>
                                                     </div>
                                                 </div>
